# 05-higher-order-tyvan266

./: cabal.project  higher-order.cabal
src/: HigherOrder.hs
test/: HigherOrderSpec.hs
