cabal-version:         3.4
name:                  higher-order
version:               0.1
build-type:            Simple
extra-source-files:    README.md

common common
  build-depends:       base ^>= 4.18.1
  ghc-options:         -Wall

library
  import:               common
  hs-source-dirs:       src
  exposed-modules:      HigherOrder

test-suite higher-order-tests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  other-modules:        HigherOrderSpec
  build-depends:        hspec
                      , higher-order
                      , mtl
                      , QuickCheck
  build-tool-depends:   hspec-discover:hspec-discover

test-suite higher-order-doctests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:        doctest
                      , template-haskell
  ghc-options:          -threaded
  hs-source-dirs:       doctest
